2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_sprite.cpp: applied the patch from Francois Guibert,
	fixed gotoAndPlay & gotoAndStop bug, Flash tries to convert STRING to NUMBER,
	if the conversion is OK then Flash uses this NUMBER as target_frame,
	else uses STRING as label of target_frame

2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: divided into .cpp & .h files
	* gameswf/gameswf_as_classes/(a lot of files): assert(fn.this_ptr) is added
	* gameswf/gameswf_sprite.*,
	* gameswf/gameswf_as_sprite.*: added createTextField() method

2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/(a lot of files): cast_to_...() are applied

2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_sprite.cpp: fixed get_depth()
	* gameswf/gameswf_test_ogl.cll: added printf("Playing ..., version ...")
	
2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC7/gameswf.vcproj: updated
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: ported to VC7

2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp:  fixed ASSetPropFlags,
	the NULL second parameter means that assetpropflags is applied to all children

2007-05-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.*: added tag 64 reader
	* gameswf/gameswf.h,
	* gameswf/gameswf_action.*,
	* gameswf/gameswf_object.*,
	* gameswf/gameswf_sprite.*:
	fixed enumerate opcodes (0x46 & 0x55)

2007-05-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: added cast_to_as_mcloader()
	* gameswf/gameswf_as_classes/as_mcloader.*: mc_loader is added to gameswf listener 
	in add_listener() but not in constructor
	* gameswf/gameswf_sprite.*: added unloadMovie()
	* gameswf/gameswf_dlist.*: added remove_display_object(character* ch) that is used 
	to unload movie
	* gameswf/gameswf_environment.* rewritten load_file().
	During loadMovie(".jpg", ...), loadMovie(".3ds", ...) & unloadMovie() new empty 